<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".CreateSessionActivity">

  <TextView
    android:id="@+id/tvHeading"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:gravity="center"
    android:text="@string/create_session"
    android:textSize="25sp"
    app:layout_constraintTop_toTopOf="parent" />

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/glH20"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.20" />

  <com.google.android.material.textfield.TextInputEditText
    android:id="@+id/etSession"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    android:hint="@string/session_name"
    app:layout_constraintBottom_toBottomOf="@id/glH20"
    app:layout_constraintTop_toTopOf="@id/glH20" />

  <Button
    android:id="@+id/btnContinue"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    android:text="@string/continue_str"
    app:layout_constraintTop_toBottomOf="@id/etSession" />
</androidx.constraintlayout.widget.ConstraintLayout>
