<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".SplashActivity">

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/glH35"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.35" />

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/glH70"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.7" />

  <ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:contentDescription="@string/app_name"
    app:layout_constraintBottom_toBottomOf="@id/glH35"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@id/glH35"
    app:srcCompat="@drawable/ic_launcher" />

  <com.google.android.material.textview.MaterialTextView
    android:id="@+id/tvAppName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/app_name"
    android:textSize="30sp"
    android:visibility="visible"
    tools:visibility="gone"
    app:layout_constraintBottom_toBottomOf="@id/glH70"
    app:layout_constraintTop_toTopOf="@id/glH70"
    app:layout_constraintVertical_bias="0.7" />

  <com.google.android.material.textfield.TextInputEditText
    android:id="@+id/etBaseUrl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    android:hint="@string/base_url"
    android:visibility="gone"
    tools:visibility="visible"
    app:layout_constraintBottom_toTopOf="@id/etUsername" />

  <com.google.android.material.textfield.TextInputEditText
    android:id="@+id/etUsername"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    android:hint="@string/user_name"
    android:visibility="gone"
    tools:visibility="visible"
    app:layout_constraintBottom_toBottomOf="@id/glH70"
    app:layout_constraintTop_toTopOf="@id/glH70" />

  <Button
    android:id="@+id/btnContinue"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    android:text="@string/continue_str"
    android:visibility="gone"
    tools:visibility="visible"
    app:layout_constraintTop_toBottomOf="@id/etUsername" />
</androidx.constraintlayout.widget.ConstraintLayout>
